--- a/deps.gradle
+++ b/deps.gradle
@@ -7,7 +7,7 @@ def versions = [ spring: '5.2.4.RELEASE', spring_security: '5.2.1.RELEASE',
 	httpcomponents:'4.5.10',tika_core:'1.23',commons_codec:'1.13',
 	commons_email:'1.5', commons_io:"2.6", commons_lang3:"3.7",
 	xmlapi:"1.0.b2", tus_server:"1.0.0-2.0",tus_client:"0.4.1", 
-	testng:"7.3.0", jsqlparser:"3.1"]
+	testng:"7.3.0", jsqlparser:"3.1", h2: "1.4.199", hsqldb: "2.5.1"]
 
 
 
@@ -97,7 +97,9 @@ def org = [
 
 def jdbc = [mariadb:"org.mariadb.jdbc:mariadb-java-client:${versions.jdbc_mariadb}",
 	pgsql : "org.postgresql:postgresql:${versions.jdbc_pgsql}",
-	mssql : "com.microsoft.sqlserver:mssql-jdbc:${versions.jdbc_mssql}"
+	mssql : "com.microsoft.sqlserver:mssql-jdbc:${versions.jdbc_mssql}",
+	h2 : "com.h2database:h2:${versions.h2}",
+	hsqldb : "org.hsqldb:hsqldb:${versions.hsqldb}"
 ]
 
 def javax = [
