--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,7 @@ rootProject.name = 'cinch'
 
 include 'cinch-base','cinch-dialect', 'cinch-dbmd'
 include 'cinch-dao', 'cinch-core', 'cinch-schema'
+
+include 'cinch-orm'
+
+include 'cinch-examples'
