--- a/cinch-schema/build.gradle
+++ b/cinch-schema/build.gradle
@@ -8,9 +8,7 @@
 
 
 plugins {
-    // Apply the java-library plugin to add support for Java Library
-    id 'java'
-	id 'maven'
+    id 'java-library'
 }
 
 apply from: '../deps.gradle'
@@ -21,8 +19,6 @@ repositories {
 		url = 'https://repo.maven.apache.org/maven2'
 	}
 }
-
-group = 'com.zitlab.palmyra.api2db'
 
 dependencies {	
 	implementation deps.jackson.databind
