--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ subprojects {
     apply plugin: 'java-library'
     apply plugin: 'maven'
 	
-	group = 'com.carboneur.palmyra.cinch'
+	group = 'com.zitlab.cinch'
 	
     repositories {
         mavenLocal()
@@ -37,6 +37,22 @@ subprojects {
 	    useTestNG {
 	        preserveOrder true
 	    }
+	}
+	
+	task sourcesJar(type: Jar, dependsOn: classes) {
+	    classifier = 'sources'
+	    from sourceSets.main.allSource
+	}
+	
+	javadoc.failOnError = false
+	task javadocJar(type: Jar, dependsOn: javadoc) {
+	    classifier = 'javadoc'
+	    from javadoc.destinationDir
+	}
+		
+	artifacts {
+	    archives sourcesJar
+	   // archives javadocJar
 	}
 }
 
